TEST_PROGRAMS/INVALID/07/slice.go
// go lecture (6), slide 8
package main


func main () {
	var x []
	var y [] string
	y = append(y, "poop")
	q := append(y, "poo")
	q[5] = 5
}
